[package]
name = "shuttle-tidb-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = "1.28.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
] }
serde = { version = "1.0", features = ["derive"] }
